# advent-of-code

./: Cargo.toml  README.md
input/2022/: day5.txt
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  main.rs
